<resources>
    <string name="app_name">CatchStars!</string>
    <string name="button_play">Play</string>
    <string name="button_send">Send</string>
    <string name="button_catch">Catch</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Entra nella stazione spaziale</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">La stazione spaziale ti dà il benvenuto</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Ehila">Ehilà astronauta!</string>
    <string name="Catch">Catch!</string>
    <string name="register">Primo volo? Registrati!</string>
    <string name="insert_code">Inserisci i tuoi codici di lancio!</string>
    <string name="primo_decollo">Pronto per il tuo primo decollo?</string>
    <string name="done">Ci siamo!</string>
    <string name="user_id">Username</string>
    <string name="choose">Cosa vuoi fare?</string>
    <string name="button_setting">setting</string>
    <string name="button_score">score</string>
    <string name="button_exit">exit</string>
    <string name="setting">Imposta i tuoi parametri di lancio!</string>
    <string name="sound">Sound</string>
    <string name="music">Music</string>
    <string name="score">Esiti di lancio</string>
    <string name="good_luck">Missione iniziata! Buona fortuna astronauta!</string>
    <string name="astronaut"> Astronaut: </string>
    <string name="prompt_confirm">Conferma password</string>
    <string name="info">Curiosità sulla stazione spaziale!</string>
    <string name="title">Titolo progetto: CatchStars!\n\nVersione: 1.0\n\nData di rilascio: 07/2023\n\nSviluppato da:\nFrattini Gaia\nMT.736610\n\nPer domande o segnalazioni\ninquadra il codice QR</string>
    <string name="contact">Per domande o segnalazioni\ninquadra il codice QR</string>
    <string name="question">Hai delle domande?</string>
    <string name="question_1">1. Quanti punti vale una stella gialla?</string>
    <string name="answer_1">Il valore delle stelle gialle dipende dalla distanza che l\'astronauta deve percorrere per raggiungerla. La somma totale del loro valore è 100 punti. La stella più lontana vale 50 punti.</string>
    <string name="question_2">2. Come si ottiene il punteggio massimo?</string>
    <string name="answer_2">er ottenere il massimo dei punti, l\'astronauta deve raccogliere tutte le stelle, sia gialle sia azzurre, prima di raggiungere la soglia critica di ossigeno.</string>
    <string name="question_3">3. In cosa consiste la penalità della soglia critica di ossigeno?</string>
    <string name="answer_3">Una volta superata la soglia critica di ossigeno, ogni 30 secondi viene sottratto un punto dal punteggio ottenuto raccogliendo le stelle.</string>
    <string name="missione_completata">Missione terminata!</string>
    <string name="rules">Pronto a iniziare?</string>
    <string name="annulla_missione">Annulla missione</string>
    <string name="partenza">Partenza!</string>
    <string name="rule1">Benvenuto astronauta!\n\nDevi sapere che nella nostra galassia si sono perse alcune stelline, il tuo compito sarà quello di recuperarle tutte.\n\nPer poter catturare una stellina dovrai riuscire a entrare nel suo campo gravitazione, il quale ha un raggio di circa 10 metri.\n\nAttenzione! L\'ossigeno è limitato: dopo i 10 minuti supererai la soglia critica e il tuo punteggio inizierà a risentirne.\n\nCattura più stelline che puoi nel più breve tempo possibile.\n\nBuona fortuna astronauta!</string>
    <string name="rule2">Per raccogliere una stellina dovrai prima entrare nel suo campo gravitazionale (circa 5 metri), se sarai troppo lontano non potrai catturarla</string>
    <string name="rule3">Le stelline non hanno tutte lo stesso punteggio, alcune valgono poco, altre moltissimo</string>
    <string name="rule4">Più stelle raccogli più sarà alto il punteggio missione.</string>
    <string name="rule5">Attenzione! L\'ossigeno è limitato: dopo i 10 minuti supererai la soglia critica e il tuo punteggio inizierà a risentirne.</string>
    <string name="rule6">Buona fortuna astronauta!</string>
    <string name="title_activity_maps">activity_maps</string>
    <string name="title_activity_maps_current_place">MapsActivityCurrentPlace</string>
    <string name="home">Home</string>
    <string name="data">Data</string>
    <string name="punti">Punti</string>
    <string name="tempo">Tempo</string>

</resources>