<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:background="@drawable/starrysky2"
    tools:context=".InfoActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/starrysky2"
        tools:layout_editor_absoluteX="16dp" />

    <!--Curiosità sulla stazione spaziale -->
    <TextView
        android:id="@+id/faq"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="70dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/question"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/dark_yellow"
        android:textSize="26dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

     <TextView
        android:id="@+id/quest_1"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="125dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/question_1"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/dark_yellow"
        android:textSize="18dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/ans_1"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginTop="160dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/answer_1"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/dark_yellow"
        android:textSize="14dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/quest_2"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="280dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/question_2"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/dark_yellow"
        android:textSize="18dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/ans_2"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="330dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/answer_2"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/dark_yellow"
        android:textSize="14dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/quest_3"
        android:layout_width="300dp"
        android:layout_height="85dp"
        android:layout_marginTop="425dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/question_3"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/dark_yellow"
        android:textSize="18dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/ans_3"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="505dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/answer_3"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/dark_yellow"
        android:textSize="14dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--Button Back -->
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@null"
        android:scaleType="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:srcCompat="@drawable/back" />





</androidx.constraintlayout.widget.ConstraintLayout>